--- a/kraeuter.html
+++ b/kraeuter.html
@@ -53,7 +53,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Geschichte</a></li>
                   <li><a class="dropdown-item" href="viewer.html">Architektur</a></li>
-                  <li><a class="dropdown-item" href="kraeuter.html">Heilkräuter</a></li>
+                  <li><a class="dropdown-item" href="#">Heilkräuter</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -68,70 +68,15 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Willkommen zur Leechkirche in Graz</h1>
-                <p>Ein Projekt zur digitalen Bewahrung und Präsentation eines Kulturguts</p>
+                <h1>Heilkräuter in der Leechkirche</h1>
             </header>
         
             <div style="text-align:justify;">
-                <p>
-                    Dieses Projekt widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
-                    Unser Ziel ist es, durch fortschrittliche 3D-Modellierungstechniken ein detailliertes und 
-                    interaktives Erlebnis zu schaffen, das die reiche Geschichte und Architektur dieser bedeutenden 
-                    kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
-                    erstellen, das sowohl für Bildungszwecke als auch zur Förderung des kulturellen Erbes genutzt werden kann.
-                </p>
-                <p>
-                    Die Leechkirche, im Herzen von Graz gelegen, ist ein architektonisches Meisterwerk mit einer 
-                    reichen Geschichte, die bis ins 14. Jahrhundert zurückreicht. Ursprünglich als Teil eines 
-                    Klosters erbaut, spiegelt sie verschiedene Baustile von der Gotik bis zur Neuzeit wider. 
-                    Ihre bedeutende Rolle in der lokalen Gemeinschaft und ihre künstlerischen Merkmale, wie die 
-                    beeindruckenden Fresken und Schnitzwerke, machen sie zu einem wichtigen Zeugnis des kulturellen 
-                    und religiösen Lebens in der Steiermark.
-                </p>
-                <p>
-                  Besonders bemerkenswert ist die Darstellung von medizinischen Kräutern innerhalb der Kirche, 
-                  die auf die lange Tradition der Kräutermedizin in der Region hinweist. Diese Kräuter waren 
-                  nicht nur für ihre heilenden Eigenschaften bekannt, sondern wurden auch symbolisch in der 
-                  Kunst und Architektur der Kirche integriert, was ihre Bedeutung in der damaligen Gesellschaft 
-                  unterstreicht. Die detaillierte Darstellung dieser Kräuter in Fresken und Schnitzereien bietet 
-                  einen einzigartigen Einblick in die mittelalterliche Kräuterheilkunde und die Verbindung zwischen 
-                  Religion und Medizin.
-              </p>
-              <p><a class="gpt" href="https://chat.openai.com/share/3899afdf-b521-42f6-8d6d-53f10ed7bac2">Generiert mit ChatGPT</a></p>
+                <p>https://static.uni-graz.at/fileadmin/gewi-institute/Kunstgeschichte/Forschungsstelle_Kuge/Aktuelle_Forschung/Forschungsberichte/Brenner_Leechkirche.pdf</p>
             </div>
         
     </div>
-
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/kirche_1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Geschichte</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/innen.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Architektur</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/kraeuter.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Heilkräuter</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
 
     <!-- Footer -->
     <footer class="text-center text-white" style="background-color: #ededda;">
