--- a/viewer.html
+++ b/viewer.html
@@ -85,7 +85,7 @@
      
          presenter.setScene({
              meshes: {
-                 "mesh_1" : { url: "models/gargo.ply" }
+                 "mesh_1" : { url: "models/Leechkirche.nxz" }
              },
              modelInstances : {
                  "model_1" : { mesh : "mesh_1" }
@@ -93,12 +93,12 @@
              trackball: { 
                  type : TurnTableTrackball,
                  trackOptions : {
-                     startPhi: 35.0,
-                     startTheta: 15.0,
+                     startPhi: 0.0,
+                     startTheta: 0.0,
                      startDistance: 2.5,
                      minMaxPhi: [-180, 180],
-                     minMaxTheta: [-30.0, 70.0],
-                     minMaxDist: [0.5, 3.0]
+                     minMaxTheta: [-80.0, 80.0],
+                     minMaxDist: [0.2, 4.0]
                  }
              }
          });
