--- a/geschichte.html
+++ b/geschichte.html
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projekt.html">Projekt</a>
@@ -51,7 +51,7 @@
                   Leechkirche
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="geschichte.html">Geschichte</a></li>
+                  <li><a class="dropdown-item" href="#">Geschichte</a></li>
                   <li><a class="dropdown-item" href="architektur.html">Architektur</a></li>
                   <li><a class="dropdown-item" href="heilkraeuter.html">Heilkräuter</a></li>
                 </ul>
@@ -77,8 +77,7 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Willkommen zur Leechkirche in Graz</h1>
-                <p>Ein Projekt zur digitalen Bewahrung und Präsentation eines Kulturguts</p>
+                <h1>Die Geschichte Leechkirche in Graz</h1>
             </header>
         
             <div style="text-align:justify;">
@@ -107,41 +106,9 @@
                   Religion und Medizin.
               </p>
               <p><a class="gpt" href="https://chat.openai.com/share/3899afdf-b521-42f6-8d6d-53f10ed7bac2">Generiert mit ChatGPT</a></p>
+              <p>[Timeline]</p>
             </div>
         
-    </div>
-
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/kirche_1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Geschichte</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="geschichte.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/innen.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Architektur</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="architektur.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/kraeuter.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Heilkräuter</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="heilkraeuter.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
-          </div>
-        </div>
-      </div>
     </div>
     </div>
 
