--- a/kontakt.html
+++ b/kontakt.html
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projekt.html">Projekt</a>
@@ -51,13 +51,22 @@
                   Leechkirche
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Geschichte</a></li>
-                  <li><a class="dropdown-item" href="viewer.html">Architektur</a></li>
-                  <li><a class="dropdown-item" href="#">Heilkräuter</a></li>
+                  <li><a class="dropdown-item" href="geschichte.html">Geschichte</a></li>
+                  <li><a class="dropdown-item" href="architektur.html">Architektur</a></li>
+                  <li><a class="dropdown-item" href="heilkraeuter.html">Heilkräuter</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Unterhaltung
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="musik.html">KI-Musik</a></li>
+                  <li><a class="dropdown-item" href="memory.html">Heilkräuter-Memory</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="kontakt.html">Kontakt</a>
+                <a class="nav-link" href="#">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -68,20 +77,26 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Heilkräuter in der Leechkirche</h1>
+                <h1>Kontakt</h1>
             </header>
         
             <div style="text-align:justify;">
-                <p>https://static.uni-graz.at/fileadmin/gewi-institute/Kunstgeschichte/Forschungsstelle_Kuge/Aktuelle_Forschung/Forschungsberichte/Brenner_Leechkirche.pdf</p>
+                <p>
+                    Dieses Projekt widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
+                    Unser Ziel ist es, durch fortschrittliche 3D-Modellierungstechniken ein detailliertes und 
+                    interaktives Erlebnis zu schaffen, das die reiche Geschichte und Architektur dieser bedeutenden 
+                    kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
+                    erstellen, das sowohl für Bildungszwecke als auch zur Förderung des kulturellen Erbes genutzt werden kann.
+                </p>
             </div>
         
     </div>
-        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="text-center text-white" style="background-color: #ededda;">
         <div class="text-center p-3" style="background-color: #a8a38f; color: #fff;">
-          © 2023
+          © 2024
         </div>
     </footer>
 
