--- a/memory.html
+++ b/memory.html
@@ -57,6 +57,15 @@
                   <li><a class="dropdown-item" href="kraeuter.html">Heilkräuter</a></li>
                 </ul>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Unterhaltung
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="musik.html">KI-Musik</a></li>
+                  <li><a class="dropdown-item" href="#">Heilkräuter-Memory</a></li>
+                </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="kontakt.html">Kontakt</a>
               </li>
