--- a/musik.html
+++ b/musik.html
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projekt.html">Projekt</a>
@@ -61,7 +61,7 @@
                   Unterhaltung
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="musik.html">KI-Musik</a></li>
+                  <li><a class="dropdown-item" href="#">KI-Musik</a></li>
                   <li><a class="dropdown-item" href="memory.html">Heilkräuter-Memory</a></li>
                 </ul>
               </li>
@@ -77,8 +77,7 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Willkommen zur Leechkirche in Graz</h1>
-                <p>Ein Projekt zur digitalen Bewahrung und Präsentation eines Kulturguts</p>
+                <h1>Kontakt</h1>
             </header>
         
             <div style="text-align:justify;">
@@ -89,59 +88,8 @@
                     kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
                     erstellen, das sowohl für Bildungszwecke als auch zur Förderung des kulturellen Erbes genutzt werden kann.
                 </p>
-                <p>
-                    Die Leechkirche, im Herzen von Graz gelegen, ist ein architektonisches Meisterwerk mit einer 
-                    reichen Geschichte, die bis ins 14. Jahrhundert zurückreicht. Ursprünglich als Teil eines 
-                    Klosters erbaut, spiegelt sie verschiedene Baustile von der Gotik bis zur Neuzeit wider. 
-                    Ihre bedeutende Rolle in der lokalen Gemeinschaft und ihre künstlerischen Merkmale, wie die 
-                    beeindruckenden Fresken und Schnitzwerke, machen sie zu einem wichtigen Zeugnis des kulturellen 
-                    und religiösen Lebens in der Steiermark.
-                </p>
-                <p>
-                  Besonders bemerkenswert ist die Darstellung von medizinischen Kräutern innerhalb der Kirche, 
-                  die auf die lange Tradition der Kräutermedizin in der Region hinweist. Diese Kräuter waren 
-                  nicht nur für ihre heilenden Eigenschaften bekannt, sondern wurden auch symbolisch in der 
-                  Kunst und Architektur der Kirche integriert, was ihre Bedeutung in der damaligen Gesellschaft 
-                  unterstreicht. Die detaillierte Darstellung dieser Kräuter in Fresken und Schnitzereien bietet 
-                  einen einzigartigen Einblick in die mittelalterliche Kräuterheilkunde und die Verbindung zwischen 
-                  Religion und Medizin.
-              </p>
-              <p><a class="gpt" href="https://chat.openai.com/share/3899afdf-b521-42f6-8d6d-53f10ed7bac2">Generiert mit ChatGPT</a></p>
             </div>
         
-    </div>
-
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/kirche_1.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Geschichte</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="geschichte.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/innen.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Architektur</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="architektur.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="images/kraeuter.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Heilkräuter</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="heilkraeuter.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
-          </div>
-        </div>
-      </div>
     </div>
     </div>
 
