added text to pages

--- a/architektur.html
+++ b/architektur.html
@@ -77,35 +77,27 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Die Geschichte Leechkirche in Graz</h1>
+                <h1>Die Architektur der Leechkirche in Graz</h1>
             </header>
         
             <div style="text-align:justify;">
                 <p>
-                    Dieses Projekt widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
-                    Unser Ziel ist es, durch fortschrittliche 3D-Modellierungstechniken ein detailliertes und 
-                    interaktives Erlebnis zu schaffen, das die reiche Geschichte und Architektur dieser bedeutenden 
-                    kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
-                    erstellen, das sowohl für Bildungszwecke als auch zur Förderung des kulturellen Erbes genutzt werden kann.
+                  Die Leechkirche, offiziell bekannt als St. Leodegar und St. Abundus-Kirche, zeichnet sich durch ihre beeindruckende Architektur aus und repräsentiert einen interessanten Mix aus verschiedenen Baustilen. Diese architektonische Meisterleistung hat die Aufmerksamkeit von Historikern und Architekturbegeisterten gleichermaßen auf sich gezogen. In diesem Text werden wir uns ausführlich mit der Architektur der Leechkirche befassen, um ihre besonderen Merkmale und historischen Einflüsse zu verstehen.
+                </p>
+                <h2>Romantik und Gotik verschmelzen</h2>
+                <p>
+                  Die Leechkirche ist ein hervorragendes Beispiel für die Synthese von Romanik und Gotik in der Sakralarchitektur. Ihr ursprünglicher Bau, der im 13. Jahrhundert begann, zeigt romanische Elemente, insbesondere in den niedrigeren Teilen des Gebäudes. Die rundbogigen Arkaden und die robuste Bauweise sind charakteristisch für die romanische Epoche. Diese Merkmale verleihen der Kirche eine solide und zeitlose Erscheinung.
                 </p>
                 <p>
-                    Die Leechkirche, im Herzen von Graz gelegen, ist ein architektonisches Meisterwerk mit einer 
-                    reichen Geschichte, die bis ins 14. Jahrhundert zurückreicht. Ursprünglich als Teil eines 
-                    Klosters erbaut, spiegelt sie verschiedene Baustile von der Gotik bis zur Neuzeit wider. 
-                    Ihre bedeutende Rolle in der lokalen Gemeinschaft und ihre künstlerischen Merkmale, wie die 
-                    beeindruckenden Fresken und Schnitzwerke, machen sie zu einem wichtigen Zeugnis des kulturellen 
-                    und religiösen Lebens in der Steiermark.
-                </p>
-                <p>
-                  Besonders bemerkenswert ist die Darstellung von medizinischen Kräutern innerhalb der Kirche, 
-                  die auf die lange Tradition der Kräutermedizin in der Region hinweist. Diese Kräuter waren 
-                  nicht nur für ihre heilenden Eigenschaften bekannt, sondern wurden auch symbolisch in der 
-                  Kunst und Architektur der Kirche integriert, was ihre Bedeutung in der damaligen Gesellschaft 
-                  unterstreicht. Die detaillierte Darstellung dieser Kräuter in Fresken und Schnitzereien bietet 
-                  einen einzigartigen Einblick in die mittelalterliche Kräuterheilkunde und die Verbindung zwischen 
-                  Religion und Medizin.
+                  Im 15. Jahrhundert erfolgte eine bedeutende Erweiterung und Umgestaltung der Leechkirche, die sie in den gotischen Stil integrierte. Dies ist insbesondere an den schlanken Säulen und den spitzbogigen Gewölben zu erkennen. Die gotische Einflussnahme verlieh der Kirche eine gewisse Eleganz und Größe. Die Mischung aus diesen beiden Stilen verleiht der Leechkirche eine einzigartige Identität und macht sie zu einem herausragenden Beispiel für die Entwicklung der Sakralarchitektur in Österreich.
               </p>
-              <p><a class="gpt" href="https://chat.openai.com/share/3899afdf-b521-42f6-8d6d-53f10ed7bac2">Generiert mit ChatGPT</a></p>
+              <h2>Das Äußere</h2>
+              <p>Das Äußere der Leechkirche ist von schlichter Eleganz geprägt. Die Fassade ist weitgehend ungegliedert und vermittelt einen Eindruck von Stabilität und Beständigkeit. Die romanischen Einflüsse sind an den Rundbogenfenstern und dem massiven Turm zu sehen, während die gotischen Elemente sich in den filigranen Maßwerken und den spitzbogigen Portalen manifestieren. Diese Kombination aus schlichter Robustheit und dekorativer Eleganz macht die äußere Erscheinung der Kirche faszinierend und ansprechend.</p>
+              <h2>Das Innere</h2>
+              <p>Das Innere der Leechkirche ist ebenso beeindruckend wie das Äußere. Das gotische Gewölbe ist eines der bemerkenswertesten Merkmale. Es schafft eine majestätische Atmosphäre und verleiht dem Kirchenraum eine vertikale Dimension, die den Blick der Besucher himmelwärts lenkt. Die schlanken Säulen und die filigrane Gewölbekonstruktion sind typisch für die Gotik und verleihen dem Inneren eine gewisse Leichtigkeit und Eleganz.</p>
+              <p>Ein weiteres architektonisches Highlight ist der prächtige Hochaltar im barocken Stil, der im 18. Jahrhundert hinzugefügt wurde. Er ist ein Meisterwerk österreichischer Kunst und zeigt die kunsthandwerkliche Finesse dieser Zeit. Die Verschmelzung von barocken Elementen mit der gotischen Architektur der Kirche ist ein faszinierendes Beispiel für stilistische Vielfalt und handwerkliches Können.</p>
+              <p>Insgesamt ist die Architektur der Leechkirche in Graz ein herausragendes Beispiel für die Entwicklung der Sakralarchitektur in Österreich. Die gelungene Vermischung von romanischen und gotischen Elementen verleiht der Kirche ihre einzigartige Identität und macht sie zu einem bedeutenden historischen und architektonischen Juwel, das sowohl die breite Öffentlichkeit als auch Historiker gleichermaßen beeindruckt. Die Leechkirche steht als Zeugnis für die künstlerische und architektonische Exzellenz vergangener Epochen und bleibt ein bemerkenswertes Wahrzeichen in der Stadt Graz.</p>
+              <p><a class="gpt" href="https://chat.openai.com/share/b2a18010-fddd-4152-85f0-2fc98b9615d3">Generiert mit ChatGPT</a></p>
             </div>
         
     </div>
