--- a/geschichte.html
+++ b/geschichte.html
@@ -77,35 +77,15 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Die Geschichte Leechkirche in Graz</h1>
+                <h1>Die Geschichte der Leechkirche in Graz</h1>
             </header>
         
             <div style="text-align:justify;">
-                <p>
-                    Dieses Projekt widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
-                    Unser Ziel ist es, durch fortschrittliche 3D-Modellierungstechniken ein detailliertes und 
-                    interaktives Erlebnis zu schaffen, das die reiche Geschichte und Architektur dieser bedeutenden 
-                    kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
-                    erstellen, das sowohl für Bildungszwecke als auch zur Förderung des kulturellen Erbes genutzt werden kann.
-                </p>
-                <p>
-                    Die Leechkirche, im Herzen von Graz gelegen, ist ein architektonisches Meisterwerk mit einer 
-                    reichen Geschichte, die bis ins 14. Jahrhundert zurückreicht. Ursprünglich als Teil eines 
-                    Klosters erbaut, spiegelt sie verschiedene Baustile von der Gotik bis zur Neuzeit wider. 
-                    Ihre bedeutende Rolle in der lokalen Gemeinschaft und ihre künstlerischen Merkmale, wie die 
-                    beeindruckenden Fresken und Schnitzwerke, machen sie zu einem wichtigen Zeugnis des kulturellen 
-                    und religiösen Lebens in der Steiermark.
-                </p>
-                <p>
-                  Besonders bemerkenswert ist die Darstellung von medizinischen Kräutern innerhalb der Kirche, 
-                  die auf die lange Tradition der Kräutermedizin in der Region hinweist. Diese Kräuter waren 
-                  nicht nur für ihre heilenden Eigenschaften bekannt, sondern wurden auch symbolisch in der 
-                  Kunst und Architektur der Kirche integriert, was ihre Bedeutung in der damaligen Gesellschaft 
-                  unterstreicht. Die detaillierte Darstellung dieser Kräuter in Fresken und Schnitzereien bietet 
-                  einen einzigartigen Einblick in die mittelalterliche Kräuterheilkunde und die Verbindung zwischen 
-                  Religion und Medizin.
-              </p>
-              <p><a class="gpt" href="https://chat.openai.com/share/3899afdf-b521-42f6-8d6d-53f10ed7bac2">Generiert mit ChatGPT</a></p>
+              <p>Die Leechkirche, offiziell als St. Leodegar und St. Abundus-Kirche bekannt, ist ein architektonisches Juwel, das sich in der österreichischen Stadt Graz befindet. Dieses sakrale Bauwerk, dessen Geschichte bis ins 13. Jahrhundert zurückreicht, fasziniert nicht nur die breite Öffentlichkeit, sondern auch Historiker:innen, die die Vergangenheit dieser Kirche erforschen. In dieser Abhandlung werden wir die Leechkirche ausführlich betrachten, ihre historische Entwicklung, ihre Architektur und ihre Bedeutung für die Stadt Graz und die österreichische Geschichte.</p>
+              <p>Die Ursprünge der Leechkirche können bis in das Jahr 1288 zurückverfolgt werden, als sie erstmals in historischen Aufzeichnungen erwähnt wurde. Die Kirche wurde jedoch wahrscheinlich bereits zuvor errichtet, da die romanische Bauweise auf eine frühere Entstehungszeit hinweist. Im Laufe der Jahrhunderte unterlag die Kirche verschiedenen Renovierungen und Erweiterungen, die ihren architektonischen Charakter veränderten und erweiterten. Während des 15. Jahrhunderts erhielt die Leechkirche gotische Elemente, die noch heute sichtbar sind. Dieses harmonische Zusammenspiel verschiedener Baustile verleiht der Kirche einen einzigartigen historischen Charme.</p>
+              <p>Die Architektur der Leechkirche ist von besonderer Bedeutung. Die Kirche verbindet Elemente der Romanik und der Gotik und repräsentiert somit einen wichtigen Abschnitt in der Entwicklung der österreichischen Sakralarchitektur. Das Äußere der Kirche beeindruckt durch seine schlichte Eleganz, während das Innere mit kunstvollen Fresken und gotischen Gewölben verziert ist. Besonders beeindruckend ist der Hochaltar, der im 18. Jahrhundert im barocken Stil gestaltet wurde und ein Meisterwerk der österreichischen Kunst darstellt.</p>
+              <p>Die Leechkirche ist nicht nur ein historisches Bauwerk, sondern auch ein wichtiger Teil des kulturellen Erbes von Graz. Sie dient nicht nur als Gotteshaus, sondern auch als Veranstaltungsort für Konzerte und kulturelle Veranstaltungen. Dies unterstreicht ihre Bedeutung als lebendiges Zentrum der Gemeinschaft in Graz. Historisch gesehen war die Leechkirche auch Schauplatz wichtiger Ereignisse und Versammlungen, was ihre Rolle in der Stadtgeschichte betont.</p>
+              <p><a class="gpt" href="https://chat.openai.com/share/b2a18010-fddd-4152-85f0-2fc98b9615d3">Generiert mit ChatGPT</a></p>
               <p>[Timeline]</p>
             </div>
         
