--- a/heilkraeuter.html
+++ b/heilkraeuter.html
@@ -81,7 +81,30 @@
             </header>
         
             <div style="text-align:justify;">
-                <p>https://static.uni-graz.at/fileadmin/gewi-institute/Kunstgeschichte/Forschungsstelle_Kuge/Aktuelle_Forschung/Forschungsberichte/Brenner_Leechkirche.pdf</p>
+                <p>Wer den Kircheninnenraum aufmerksam betrachtet, kann hoch am Gewölbeansatz verschiedene gotische Pflanzenkapitelle erkennen. Hier wird die Bedeutung der mittelalterlichen Geistlichkeit für Theologie und Mystik dieser Zeit sichtbar.</p>
+                <h2>Folgende Heilpflanzen sind in der Kirche zu finden:</h2>
+                <p>Distel – Onopordum acanthium<br>Heilwirkung: verdauungsfördernd</p>
+                <p>Weißdorn – Crataegus monogyna<br>
+                  Heilwirkung: bei nervösen Herzbeschwerden Unterstützung der Herz-Kreislauffunktion</p>
+                <p>Lilie – Lilium candidum<br>Narzisse – Narcissus poeticus<br>
+                  Heilwirkung: wundheilungsfördernd, entzündungshemmend/antibakteriell</p>
+                <p>Efeu – Hedera helix<br>
+                  Heilwirkung: bei Husten und Katarrhen der Atemwege, auswurffördernd, krampflösend</p>
+                <p>Klee – Trifolium repens, Trifolium pratense<br>
+                  Leberblümchen – Hepatica nobilis<br>
+                  Heilwirkung: bei Wechseljahresbeschwerden/hautreizend, nierenreizend</p>
+                <p>Bilsenkraut – Hyoscyamus niger<br>
+                  Ehrenpreis - Veronica officinalis/chamaedris<br>
+                  Heilwirkung: giftig! krampflösend/auswurffördernd, bei Verdauungsstörungen und Leberkrankungen; zur Wundbehandlung</p>
+                <p>Feige – Ficus carica<br>
+                  Heilwirkung: verdauungsfördernd</p>
+                <p>Erdbeere – Fragaria vesca<br>
+                  Hopfen – Humulus lupulus<br>
+                  Heilwirkung: bei Durchfällen, als Schwarztee-Ersatz/beruhigend, verdauungsfördernd, antibakteriell</p>
+                <p>Malve – Malva sylvestris<br>
+                  Heilwirkung: bei trockenem Reizhusten, Hals- und Rachenentzündungen</p>
+                <p>Eiche – Quercus robur<br>
+                  Heilwirkung: entzündungshemmend, antibakteriell, pilzwachstumshemmend</p>
             </div>
         
     </div>
