--- a/musik.html
+++ b/musik.html
@@ -77,17 +77,32 @@
         <div class="container">
             <div id="content" class="row">
               <header>
-                <h1>Kontakt</h1>
+                <h1>KI-generierte Musik über die Leechkirche</h1>
             </header>
         
             <div style="text-align:justify;">
-                <p>
-                    Dieses Projekt widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
-                    Unser Ziel ist es, durch fortschrittliche 3D-Modellierungstechniken ein detailliertes und 
-                    interaktives Erlebnis zu schaffen, das die reiche Geschichte und Architektur dieser bedeutenden 
-                    kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
-                    erstellen, das sowohl für Bildungszwecke als auch zur Förderung des kulturellen Erbes genutzt werden kann.
-                </p>
+              <video width="320" height="240" controls>
+                <source src="music/Leechkirche.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+            <div style="text-align:justify;">
+              <video width="320" height="240" controls>
+                <source src="music/magic_herbs.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+            <div style="text-align:justify;">
+              <video width="320" height="240" controls>
+                <source src="music/magic_herbs_2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+            <div style="text-align:justify;">
+              <video width="320" height="240" controls>
+                <source src="music/spyder in the church.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
             </div>
         
     </div>
