changed headings on pages

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <img src="images/kirche_1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Geschichte</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Die Leechkirche ist nicht nur ein historisches Bauwerk, sondern auch ein wichtiger Teil des kulturellen Erbes von Graz.</p>
             <a href="geschichte.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
           </div>
         </div>
@@ -127,7 +127,7 @@
           <img src="images/innen.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Architektur</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Die Leechkirche ist ein hervorragendes Beispiel für die Synthese von Romanik und Gotik in der Sakralarchitektur.</p>
             <a href="architektur.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
           </div>
         </div>
@@ -137,7 +137,7 @@
           <img src="images/kraeuter.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Heilkräuter</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Die Leechkirche besitzt am Gewölbeansatz gotische Pflanzenkapitelle, die die mittelalterliche Geistlichkeit widerspiegeln.</p>
             <a href="heilkraeuter.html" class="btn btn-secondary stretched-link">Mehr erfahren</a>
           </div>
         </div>
