--- a/kontakt.html
+++ b/kontakt.html
@@ -65,6 +65,15 @@
                   <li><a class="dropdown-item" href="memory.html">Heilkräuter-Memory</a></li>
                 </ul>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  3D-Modelle
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="viewer_aussenbereich.html">Außenbereich</a></li>
+                  <li><a class="dropdown-item" href="viewer_innenbereich.html">Innenbereich</a></li>
+                </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Kontakt</a>
               </li>
@@ -95,31 +104,31 @@
           <h2>Ansprechpartner:innen</h2>
                 <div class="contact-person">
                     <h4>Andreas Atzmüller</h4>
-                    <p>Email: <a href="mailto:andreas.atzmueller@edu.uni-graz.at">andreas.atzmueller@edu.uni-graz.at</a></p>
+                    <p>E-Mail: <a href="mailto:andreas.atzmueller@edu.uni-graz.at">andreas.atzmueller@edu.uni-graz.at</a></p>
                 </div>
                 <div class="contact-person">
                   <h4>Theresa Csuk</h4>
-                  <p>Email: <a href="mailto:theresa.csuk@edu.uni-graz.at">theresa.csuk@edu.uni-graz.at</a></p>
+                  <p>E-Mail: <a href="mailto:theresa.csuk@edu.uni-graz.at">theresa.csuk@edu.uni-graz.at</a></p>
               </div>
                 <div class="contact-person">
                     <h4>Christina Dittmann</h4>
-                    <p>Email: <a href="mailto:christina.dittmann@edu.uni-graz.at">christina.dittmann@edu.uni-graz.at</a></p>
+                    <p>E-Mail: <a href="mailto:christina.dittmann@edu.uni-graz.at">christina.dittmann@edu.uni-graz.at</a></p>
                 </div>
                 <div class="contact-person">
                     <h4>Dominik Delic</h4>
-                    <p>Email: <a href="mailto:dominik.delic@edu.uni-graz.at">dominik.delic@edu.uni-graz.at</a></p>
+                    <p>E-Mail: <a href="mailto:dominik.delic@edu.uni-graz.at">dominik.delic@edu.uni-graz.at</a></p>
                 </div>
                 <div class="contact-person">
                     <h4>Sebastian Meißl</h4>
-                    <p>Email: <a href="mailto:sebastian.meissl@edu.uni-graz.at">sebastian.meissl@edu.uni-graz.at</a></p>
+                    <p>E-Mail: <a href="mailto:sebastian.meissl@edu.uni-graz.at">sebastian.meissl@edu.uni-graz.at</a></p>
                 </div>
                 <div class="contact-person">
                   <h4>Johanna Ofenauer</h4>
-                  <p>Email: <a href="mailto:johanna.ofenauer@edu.uni-graz.at">johanna.ofenauer@edu.uni-graz.at</a></p>
+                  <p>E-Mail: <a href="mailto:johanna.ofenauer@edu.uni-graz.at">johanna.ofenauer@edu.uni-graz.at</a></p>
               </div>
               <div class="contact-person">
                 <h4>Gisela Rosalie-Faltis</h4>
-                <p>Email: <a href="mailto:gisela.faltis@edu.uni-graz.at">gisela.faltis@edu.uni-graz.at</a></p>
+                <p>E-Mail: <a href="mailto:gisela.faltis@edu.uni-graz.at">gisela.faltis@edu.uni-graz.at</a></p>
             </div>
       </div>
         </div>
