--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
                   <li><a class="dropdown-item" href="memory.html">Heilkräuter-Memory</a></li>
                 </ul>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  3D-Modelle
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="viewer_aussenbereich.html">Außenbereich</a></li>
+                  <li><a class="dropdown-item" href="viewer_innenbereich.html">Innenbereich</a></li>
+                </ul>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="kontakt.html">Kontakt</a>
               </li>
