--- a/heilkraeuter.html
+++ b/heilkraeuter.html
@@ -79,9 +79,89 @@
               <header>
                 <h1>Heilkräuter in der Leechkirche</h1>
             </header>
+
         
             <div style="text-align:justify;">
                 <p>Wer den Kircheninnenraum aufmerksam betrachtet, kann hoch am Gewölbeansatz verschiedene gotische Pflanzenkapitelle erkennen. Hier wird die Bedeutung der mittelalterlichen Geistlichkeit für Theologie und Mystik dieser Zeit sichtbar.</p>
+
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <div id="carouselExampleCaptions" class="carousel-dark slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/Diestel.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Distel – Onopordum acanthium</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Weissdorn.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Weißdorn – Crataegus monogyna</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Lilie.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Lilie – Lilium candidum</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Efeu.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Efeu – Hedera helix</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Klee.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Klee – Trifolium repens, Trifolium pratense</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Bilsenkraut.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Bilsenkraut – Hyoscyamus niger</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Feige.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Feige – Ficus carica</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Erdbeere.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Erdbeere – Fragaria vesca</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Malve.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Malve – Malva sylvestris</h5>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/Eiche.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption bg-custom" style="position: static;">
+                              <h5>Eiche – Quercus robur</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                    </div>
+                    </div>
+
                 <h2>Folgende Heilpflanzen sind in der Kirche zu finden:</h2>
                 <p>Distel – Onopordum acanthium<br>Heilwirkung: verdauungsfördernd</p>
                 <p>Weißdorn – Crataegus monogyna<br>
@@ -109,6 +189,8 @@
         
     </div>
         </div>
+
+    </div>
 
     <!-- Footer -->
     <footer class="text-center text-white" style="background-color: #ededda;">
