corrected heilkraeuter.html link

--- a/memory.html
+++ b/memory.html
@@ -54,7 +54,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="geschichte.html">Geschichte</a></li>
                   <li><a class="dropdown-item" href="viewer.html">Architektur</a></li>
-                  <li><a class="dropdown-item" href="kraeuter.html">Heilkräuter</a></li>
+                  <li><a class="dropdown-item" href="heilkraeuter.html">Heilkräuter</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
