--- a/geschichte.html
+++ b/geschichte.html
@@ -95,7 +95,9 @@
               <p>Die Architektur der Leechkirche ist von besonderer Bedeutung. Die Kirche verbindet Elemente der Romanik und der Gotik und repräsentiert somit einen wichtigen Abschnitt in der Entwicklung der österreichischen Sakralarchitektur. Das Äußere der Kirche beeindruckt durch seine schlichte Eleganz, während das Innere mit kunstvollen Fresken und gotischen Gewölben verziert ist. Besonders beeindruckend ist der Hochaltar, der im 18. Jahrhundert im barocken Stil gestaltet wurde und ein Meisterwerk der österreichischen Kunst darstellt.</p>
               <p>Die Leechkirche ist nicht nur ein historisches Bauwerk, sondern auch ein wichtiger Teil des kulturellen Erbes von Graz. Sie dient nicht nur als Gotteshaus, sondern auch als Veranstaltungsort für Konzerte und kulturelle Veranstaltungen. Dies unterstreicht ihre Bedeutung als lebendiges Zentrum der Gemeinschaft in Graz. Historisch gesehen war die Leechkirche auch Schauplatz wichtiger Ereignisse und Versammlungen, was ihre Rolle in der Stadtgeschichte betont.</p>
               <p><a class="gpt" href="https://chat.openai.com/share/b2a18010-fddd-4152-85f0-2fc98b9615d3">Generiert mit ChatGPT</a></p>
-              <p>[Timeline]</p>
+              <h2>Die faszinierende Historie der Leechkirche in Graz als Zeitleiste</h2>
+              <p><iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ujKT1ETynscBfcYb53Y8uHzS_E3ggDTh1vOW4u1QALw&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+              </p>
             </div>
         
     </div>
