--- a/architektur.html
+++ b/architektur.html
@@ -93,6 +93,8 @@
                 <p>
                   Die Leechkirche, offiziell bekannt als St. Leodegar und St. Abundus-Kirche, zeichnet sich durch ihre beeindruckende Architektur aus und repräsentiert einen interessanten Mix aus verschiedenen Baustilen. Diese architektonische Meisterleistung hat die Aufmerksamkeit von Historikern und Architekturbegeisterten gleichermaßen auf sich gezogen. In diesem Text werden wir uns ausführlich mit der Architektur der Leechkirche befassen, um ihre besonderen Merkmale und historischen Einflüsse zu verstehen.
                 </p>
+                <h2>Video-Führung der KHG Graz</h2>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/BJ-jdXkc-b4?si=fSoXMkNxw7qGBOnT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>Romantik und Gotik verschmelzen</h2>
                 <p>
                   Die Leechkirche ist ein hervorragendes Beispiel für die Synthese von Romanik und Gotik in der Sakralarchitektur. Ihr ursprünglicher Bau, der im 13. Jahrhundert begann, zeigt romanische Elemente, insbesondere in den niedrigeren Teilen des Gebäudes. Die rundbogigen Arkaden und die robuste Bauweise sind charakteristisch für die romanische Epoche. Diese Merkmale verleihen der Kirche eine solide und zeitlose Erscheinung.
