--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
             <div style="text-align:justify;">
                 <p>
-                    Dieses Projekt widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
+                    Dieses Projekt ist als Abschlussarbeit im Rahmen der universitären Veranstaltung 'Digital Museology', betreut von Chiara Zuanni, entstanden. Es widmet sich der digitalen Erfassung und Modellierung der Leechkirche in Graz. 
                     Unser Ziel ist es, durch fortschrittliche 3D-Modellierungstechniken ein detailliertes und 
                     interaktives Erlebnis zu schaffen, das die reiche Geschichte und Architektur dieser bedeutenden 
                     kulturellen Stätte zugänglich macht. Wir streben danach, ein umfassendes digitales Archiv zu 
