--- a/architektur.html
+++ b/architektur.html
@@ -90,9 +90,9 @@
             </header>
         
             <div style="text-align:justify;">
-                <p>
-                  Die Leechkirche, offiziell bekannt als St. Leodegar und St. Abundus-Kirche, zeichnet sich durch ihre beeindruckende Architektur aus und repräsentiert einen interessanten Mix aus verschiedenen Baustilen. Diese architektonische Meisterleistung hat die Aufmerksamkeit von Historikern und Architekturbegeisterten gleichermaßen auf sich gezogen. In diesem Text werden wir uns ausführlich mit der Architektur der Leechkirche befassen, um ihre besonderen Merkmale und historischen Einflüsse zu verstehen.
-                </p>
+                <p>Die Leechkirche gilt als bedeutendster frühgotischer Sakralbau der Stadt Graz. Der westliche Vorbau mit zwei seitlichen Türmen stammt ebenfalls aus der frühgotischen Erbauungszeit. Die über der schmalen Vorhalle liegende Empore, die sich ursprünglich in drei Spitzbögen zum Kirchenraum hin geöffnet hat, ist heute vermauert, aber seit der Restaurierung wieder deutlich sichtbar. Für die steirische Bauentwicklung erlangte sie eine Vorbildwirkung, wie an den Wallfahrtskirchen Mariazell und Pöllauberg sowie der Stadtpfarrkirche Pettau (Ptuj) zu sehen ist.</p>
+                <p>Die einschiffige, kreuzrippengewölbte Saalkirche mit einem Chorschluss in fünf Seiten eines Achtecks folgt in seiner starken Betonung kapellenartiger, durchlichteter Räume dem architektonischen Vorbild der französischen Hüttengotik. Eine Entmaterialisierung in Form von Durchbrüchen und die Auflösung der starren Mauermassen zugunsten möglichst vieler und breiter Fenster wurde hier verwirklicht. Früher erhellten elf Fenster von drei Seiten den Innenraum, wobei spätere Umbauten an der Nordseite diese Lichteinwirkung schmälerten.</p>
+                <p>Als architektonisches Vorbild kann etwa die Pariser Sainte-Chapelle angeführt werden, während für die Kapitelle mit Pflanzenmotiven die Kathedrale von Reims als Vorbild diente. Des Weiteren kann in der Sockelgestaltung der Dienstbündel gewisse Ähnlichkeiten zur Deutschordenskirche St. Elisabeth in Marburg festgestellt werden.</p>
                 <h2>Video-Führung der KHG Graz</h2>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/BJ-jdXkc-b4?si=fSoXMkNxw7qGBOnT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>Romantik und Gotik verschmelzen</h2>
