--- a/Leechkirche_altar.html
+++ b/Leechkirche_altar.html
@@ -112,7 +112,7 @@
      
          presenter.setScene({
              meshes: {
-                 "mesh_1" : { url: "models/Leechkirche_altar.nxz" }
+                 "mesh_1" : { url: "models/new_new_altar.ply"}
              },
              modelInstances : {
                  "model_1" : { mesh : "mesh_1" }
