--- a/memory.html
+++ b/memory.html
@@ -62,7 +62,6 @@
                   Unterhaltung
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="musik.html">KI-Musik</a></li>
                   <li><a class="dropdown-item" href="#">Heilkräuter-Memory</a></li>
                 </ul>
               </li>
@@ -80,6 +79,11 @@
               </li>
             </ul>
           </div>
+          <div class="d-flex ms-auto align-items-center" style="gap: 4px;">
+            <a href="memory.html" class="nav-link p-0" style="font-size: 15px; color: black;">DE</a>
+            <span style="font-size: 15px;">|</span>
+            <a href="memory_en.html" class="nav-link p-0" style="font-size: 15px; color: black;">EN</a>
+        </div>
         </div>
       </nav>
 
